--- a/views/templates/admin/create.html.twig
+++ b/views/templates/admin/create.html.twig
@@ -3,35 +3,7 @@
 {% block content %}
     <div class="row justify-content-center">
         <div class="col">
-
-            {% block artlice_form %}
-                {{ form_start(articleForm) }}
-                <div class="card">
-                    <h3 class="card-header">
-                        <i class="material-icons">edit</i>
-                        {{ 'Article'|trans({}, 'Modules.Openarticles.Admin') }}
-                    </h3>
-                    <div class="card-block">
-                        <div class="form-wrapper card-text">
-                            {{ form_errors(articleForm) }}
-
-                            {% block push_form_rest %}
-                                {{ form_rest(articleForm) }}
-                            {% endblock %}
-                        </div>
-                    </div>
-                    <div class="card-footer">
-                        <a href="{{ path('oit_article_index') }}" class="btn btn-outline-secondary">
-                            {{ 'Cancel'|trans({}, 'Admin.Actions') }}
-                        </a>
-                        <button class="btn btn-primary float-right">
-                            {{ 'Save'|trans({}, 'Admin.Actions') }}
-                        </button>
-                    </div>
-                </div>
-                {{ form_end(articleForm) }}
-            {% endblock %}
-
+            {% include '@Modules/openarticles/views/templates/admin/form.html.twig' %}
         </div>
     </div>
 {% endblock %}
