--- a/views/templates/admin/form.html.twig
+++ b/views/templates/admin/form.html.twig
@@ -10,7 +10,7 @@
             <div class="form-wrapper card-text">
                 {{ form_errors(articleForm) }}
 
-                {% block push_form_rest %}
+                {% block article_form_rest %}
                     {{ form_rest(articleForm) }}
                 {% endblock %}
             </div>
