--- a/views/templates/admin/article.html.twig
+++ b/views/templates/admin/article.html.twig
@@ -14,4 +14,5 @@
     {{ parent() }}
 
     <script src="{{ asset('../modules/openarticles/views/assets/js/article_grid.bundle.js') }}"></script>
+    <script src="{{ asset('themes/default/js/bundle/pagination.js') }}"></script>
 {% endblock %}
