--- a/views/templates/admin/article.html.twig
+++ b/views/templates/admin/article.html.twig
@@ -1,6 +1,29 @@
 {% extends '@PrestaShop/Admin/layout.html.twig' %}
 
 {% block content %}
+
+    {% block men_form_panel %}
+        {{ form_start(configForm) }}
+        <div class="card">
+            <h3 class="card-header">
+                <i class="material-icons">settings</i> {{ 'Configuration des articles'|trans({}, 'Modules.Openarticles.Admin') }}
+            </h3>
+            <div class="card-body">
+                <div class="form-wrapper">
+                    {{ form_widget(configForm) }}
+                </div>
+            </div>
+            <div class="card-footer">
+                <div class="d-flex justify-content-end">
+                    <button class="btn btn-primary float-right" id="save-button">
+                        {{ 'Save'|trans({}, 'Admin.Actions') }}
+                    </button>
+                </div>
+            </div>
+        </div>
+        {{ form_end(configForm) }}
+    {% endblock %}
+
     {% block article_list_panel %}
         <div class="row">
             <div class="col">
@@ -15,4 +38,5 @@
 
     <script src="{{ asset('../modules/openarticles/views/assets/js/article_grid.bundle.js') }}"></script>
     <script src="{{ asset('themes/default/js/bundle/pagination.js') }}"></script>
+    <script src="{{ asset('../modules/openarticles/views/assets/js/form.bundle.js') }}"></script>
 {% endblock %}
